--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: yu-ai-codemather-backend
+  profiles:
+    # 激活dev环境
+    active: dev
 
 server:
   port: 8123
@@ -17,3 +20,4 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
