--- a/yu-ai-code-mother-frontend/package.json
+++ b/yu-ai-code-mother-frontend/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "openapi2ts": "openapi2ts",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/",
-    "opneapi2ts": "openapi2ts"
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
+    "@types/markdown-it": "^14.1.2",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
