--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
                 <artifactId>langchain4j-reactor</artifactId>
                 <version>1.1.0-beta7</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.java-diff-utils</groupId>
+            <artifactId>java-diff-utils</artifactId>
+            <version>4.15</version> <!-- 使用最新版本 -->
+        </dependency>
     </dependencies>
 
     <build>
