--- a/yu-ai-code-mother-frontend/package.json
+++ b/yu-ai-code-mother-frontend/package.json
@@ -14,9 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/markdown-it": "^14.1.2",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
-    "@types/markdown-it": "^14.1.2",
+    "diff2html": "^3.4.52",
     "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
     "pinia": "^3.0.3",
