--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,9 @@ spring:
   profiles:
     # 激活dev环境
     active: dev
-
+  session:
+    store-type: redis
+    timeout: 259200
 server:
   port: 8123
   servlet:
@@ -20,4 +22,3 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
-
